# Vectoid

./: .gitignore  Doxyfile  LICENSE.txt  README.md  TODO
kxm/: CoordSysCore.cpp  Interface.cpp  KXMAppDelegate.h  KXMGLView.h  KXMGLView.mm  KXMViewController.h  KXMViewController.m  KXMViewController.mm  PerspectiveProjection.cpp  SceneGraphNode.cpp  kxm-Prefix.pch  main.m
kxm.xcodeproj/: project.pbxproj
kxm.xcodeproj/project.xcworkspace/xcshareddata/: kxm.xccheckout
kxm/Core/: Buffer.cpp  IntModN.cpp  Thread.cpp  logging.cpp
kxm/Game/: AccelerometerTask.mm  CustomProcessPool.cpp  Event.cpp  EventQueue.cpp  EventQueueCore.cpp  EventQueueHub.cpp  FrameTimeProcess.cpp  FrameTimeTask.cpp  OldEventQueueCore.cpp  Process.cpp  ProcessesCore.cpp  Task.cpp  TaskList.cpp  Tasks.cpp  ThreadCouplingBuffer.cpp
kxm/Shaders/: Shader.fsh  Shader.vsh
kxm/Vectoid/: AgeColoredParticles.cpp  Camera.cpp  CoordSys.cpp  Geode.cpp  Particles.cpp  ParticlesGeometry.cpp  ParticlesRenderer.cpp  Range.cpp  SceneGraphNode.cpp  TestTriangle.cpp  ZarchTerrain.cpp
kxm/Zarch/: CameraProcess.cpp  CameraTask.cpp  LanderGeometry.cpp  LanderProcess.cpp  LanderTask.cpp  MapParameters.cpp  NewFrameTimeProcess.cpp  Presentation.cpp  ShotsProcess.cpp  ShotsTask.cpp  Simulation.cpp  StarFieldProcess.cpp  StarFieldTask.cpp  Terrain.cpp  TerrainProcess.cpp  TerrainRenderer.cpp  TerrainTask.cpp  ThrusterParticlesGeometry.cpp  ThrusterParticlesProcess.cpp  ThrusterParticlesTask.cpp  Zarch.cpp  ZarchTerrain.cpp
kxm/Zarch/Events/: ControlsStateEvent.cpp  FrameTimeEvent.cpp  LanderMoveEvent.cpp  LanderThrusterEvent.cpp  LanderVelocityEvent.cpp  ZarchEvent.cpp
kxm/en.lproj/: KXMViewController_iPad.xib  KXMViewController_iPhone.xib
prj/Raspiator/: CMakeLists.txt  Raspiator.cbp  Raspiator.files
prj/Raspiator/src/: Cuboid.cpp  Cuboid.h  Glyphs.cpp  Glyphs.h  Indicatower.cpp  Indicatower.h  JenkinsAccess.cpp  JenkinsAccess.h  JobPanel.cpp  JobPanel.h  TextConsole.cpp  TextConsole.h  TextPanel.cpp  TextPanel.h  TextRing.cpp  TextRing.h  VideoCoreDisplay.cpp  VideoCoreDisplay.h  Visualization.cpp  Visualization.h  main.cpp  old_Visualization.h
prj/Raspiator/tools/fontgen/: TextDisplay.cpp  TextDisplay.h  fontgen.pro  main.cpp
prj/Raspiator/tools/qt_radiator/: qt_radiator.pro
prj/Raspiator/tools/qt_radiator/src/: QtController.cpp  QtController.h  QtGLDisplay.cpp  QtGLDisplay.h  main.cpp
src/AI/: AI.cpp  Actor.cpp  Saucer.cpp
src/Core/: BoundingBoxCollisionChecker.cpp  Buffer.cpp  CompletionActionAdapter.cpp  FloatModN.cpp  FunctionAction.cpp  IntModN.cpp  Interface.cpp  LineSegmentOffsetter.cpp  Log.cpp  NumberTools.cpp  Particles.cpp  PointCollisionChecker.cpp  StringTools.cpp  Tools.cpp  logging.cpp
src/DataSet/: BoundingBoxTree.cpp  ConstrainedDelauneyTriangulationXY.cpp  DelauneyTriangulation.cpp  DelauneyTriangulationXY.cpp  GeometryTools.cpp  GrowRegion.cpp  KDTree.cpp  LineSegments.cpp  MarchingCubes.cpp  MarchingTetrahedra.cpp  Points.cpp  RegularScalarGrid.cpp  SimpleLineSegmentList.cpp  SimpleTriangleList.cpp  SimpleTriangulationXY.cpp  TriangleTransformer.cpp  TriangleTreeXY.cpp  Triangles.cpp  TriangulationRefinerXY.cpp  VertexNormalTriangleProvider.cpp  VertexNormals.cpp  VertexSet.cpp
src/Game/: Actions.cpp  ActorIds.cpp  ActorNaming.cpp  CustomProcessPool.cpp  Event.cpp  EventLoopHub.cpp  EventQueue.cpp  EventQueueHub.cpp  Process.cpp  Processes.cpp  ProcessesCore.cpp
src/Gui/: Button.cpp  ComboBarrel.cpp  Context.cpp  CustomButton.cpp  EmptySpace.cpp  Gui.cpp  GuiElement.cpp  Label.cpp  Strip.cpp
src/IO/: IOTools.cpp  ListenSocket.cpp  SocketStream.cpp  StlReader.cpp  StlWriter.cpp
src/SceneGraph/: AgeColoredParticles.cpp  Camera.cpp  ComboBarrel.cpp  Context.cpp  CoordSys.cpp  CoordSysCore.cpp  CustomPanel.cpp  Geode.cpp  Geometry.cpp  Glyphs.cpp  GroupNode.cpp  LineSegments.cpp  LitColorCodedTriangles.cpp  LitTriangles.cpp  MapParameters.cpp  Node.cpp  ParticlesRenderer.cpp  PerspectiveProjection.cpp  Points.cpp  RenderVisitor.cpp  ScalarGrid2D.cpp  SceneGraphNode.cpp  SimpleGeometry.cpp  SimpleGeometryRenderer.cpp  SimpleLighting.cpp  Terrain.cpp  TerrainRenderer.cpp  TestTriangle.cpp  TextConsole.cpp  TransparentTriangles.cpp  TreeNode.cpp
src/Vectoid/: AgeColoredParticles.cpp  BoundingBox.cpp  BoundingBoxCollisionChecker.cpp  Camera.cpp  CollidableBoundingBox.cpp  CollidablePoint.cpp  Collider.cpp  CoordSys.cpp  CoordSysCore.cpp  Geode.cpp  Glyphs.cpp  LitTriangles.cpp  Particles.cpp  ParticlesRenderer.cpp  PerspectiveProjection.cpp  PointCollisionChecker.cpp  Range.cpp  SceneGraphNode.cpp  SimpleLighting.cpp  SimpleTriangleList.cpp  TestTriangle.cpp  TextConsole.cpp
src/VectoidOpenGL/: AgeColoredParticles.cpp  Camera.cpp  CoordSys.cpp  Device.cpp  Glyphs.cpp  ParticlesRenderer.cpp  PerspectiveProjection.cpp  TestTriangle.cpp  TextConsole.cpp
src/Zarch/: EventHandlerCore.cpp  LanderGeometry.cpp  MapParameters.cpp  Presentation.cpp  SaucerGeometry.cpp  SimpleGeometry.cpp  Simulation.cpp  Terrain.cpp  Zarch.cpp
(+789 files in other folders)
